<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TradeX</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">View Profile</string>
    <string name="view_comments_fragment">View Comments</string>
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="instagramhomeactivity">InstagramHomeActivity</string>
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="intent_user">intent_user</string>
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="open_camera">Open Camera</string>
    <string name="next">Next</string>
    <string name="string_share">Share</string>
    <string name="string_next">Next</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="gridlayout">GRIDLAYOUT</string>
    <string name="from_toss">From - To</string>
    <string name="tech_asokwah">Tech-Asokwah</string>
    <string name="time">time</string>
    <string name="rideid">rideId</string>
    <string name="i_m_a_driver">I\'m a Driver</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="distance">distance</string>
    <string name="_0">0</string>
    <string name="call_uber">call Uber</string>
    <string name="uberblack">UberBlack</string>
    <string name="uberxl">UberXl</string>
    <string name="uberx">UberX</string>
    <string name="logouts">logout</string>
    <string name="settingss">Settings</string>
    <string name="historys">history</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>
    <string name="call_bus_driver">Call Bus Driver</string>
    <string name="workings">Working</string>
    <string name="todoagain">TODO</string>
    <string name="car">Car</string>
    <string name="select_driver_picture">Select Driver picture</string>
    <string name="balance_0">Balance: 0€</string>
    <string name="paypal_email">Paypal Email</string>
    <string name="payout">payout</string>
    <string name="from_tos">From-To</string>
    <string name="baseprice">Baseprice</string>
    <string name="rideprice">Rideprice</string>
    <string name="date">date:</string>
    <string name="_30th_june_2017">30th June 2017</string>
    <string name="_0s">0s</string>
    <string name="_0_usd">0 USD</string>
    <string name="names">name</string>
    <string name="phones">phone</string>
    <string name="pay_here">Pay Here</string>
    <string name="eta">ETA:</string>
    <string name="view_user_s_image">View User\'s image</string>
    <string name="destinations">Destination: --</string>
    <string name="picked_customers">picked customer</string>
    <string name="customer_profile_image">Customer profile image</string>
    <string name="emailss">Email</string>
    <string name="emailsd">Email</string>
    <string name="uberblackS">Uberblack</string>
    <string name="uberblackxiSS">UberblackXI</string>
    <string name="passport_noSS">PASSPORT NO.</string>
    <string name="descriptionSS">DESCRIPTION</string>
    <string name="operationSS">OPERATION</string>
    <string name="residenceSS">RESIDENCE</string>
    <string name="in_order_to_provide_safety_and_security_for_members_of_this_community_we_will_like_you_to_provide_these_additional_informationSS">In order to provide safety and security for members of this community, we will like you to provide these additional information</string>
    <string name="click_button_to_set_office_locationSS">CLICK BUTTON TO SET OFFICE LOCATION</string>
    <string name="set_your_passport_picturess">set your passport picture</string>
    <string name="set_the_operationss">set the operation</string>
    <string name="set_the_descriptionss">set the description</string>
    <string name="set_the_residencess">set the residence</string>
    <string name="call_Trader" />
    <string name="call_trader">call_Trader</string>
    <string name="from_to">From - To</string>
    <string name="distancess">distance</string>
    <string name="datess">date</string>
    <string name="namess">name</string>
    <string name="phoness">phone</string>
    <string name="pay_heress">Pay Here</string>
    <string name="for_users">for user</string>
    <string name="navigation_drawer_things">navigation drawer things</string>
    <string name="my_string_mr_chooser_searching">my @string/mr_chooser_searching</string>
    <string name="zoom_in_content">zoom in content</string>
    <string name="zoom_out">zoom_out</string>
    <string name="logout">logout</string>
    <string name="working">Working</string>
    <string name="settings">Settings</string>
    <string name="history">history</string>
    <string name="picked_customerss">picked customer</string>
    <string name="destinationss">Destination: --</string>
    <string name="customerprofileimage">customerProfileImage</string>
    <string name="picked_customer">picked customer</string>
    <string name="destination">Destination: --</string>
    <string name="accessibility">accessibility</string>
    <string name="changedriveravailable">changedriveravailable</string>
    <string name="search_text">Search text</string>
    <string name="vip_99">开通Vip 99元</string>
    <string name="zhjs">zhj</string>
    <string name="zhj">zhj</string>
    <string name="_99">99+</string>
    <string name="android">Android</string>
    <string name="fragment">Fragment自定义布局</string>
    <string name="theghhd">苹果</string>
    <string name="githubs">github</string>
    <string name="github">github</string>
    <string name="fddf">设置</string>
    <string name="ddad">退出</string>
    <string name="here">0</string>
    <string name="price">Price</string>
    <string name="name_of_product">Name of Product</string>
    <string name="display_category_of_product">Display Category of Product</string>
    <string name="display_name_of_products">Display name of Product</string>
    <string name="show_days_uploaded">Show days uploaded</string>
    <string name="shows_name_of_trader">Shows name of Trader</string>
    <string name="display_name_of_product">Display name of Product</string>
    <string name="currency">Currency</string>
    <string name="todos">TODO</string>
    <string name="the_ratings">the ratings</string>
    <string name="customername">CustomerName</string>
    <string name="book_title">Book Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="tradersimageonscreen">tradersimageonscreen</string>
    <string name="pictureofmyviewpager">pictureofmyviewpager</string>
    <string name="this_is_my_application">This is my application</string>
    <string name="women_shoes">Women Shoes</string>
    <string name="thetradername">thetradername</string>
    <string name="header">Header</string>
    <string name="SHOES">SHOES</string>
    <string name="shoes">shoes</string>
    <string name="books">books</string>
    <string name="theproductname">theproductname</string>
    <string name="productpricehere">ProductPrice</string>
    <string name="categoryheretoo">categoryhere</string>
    <string name="thenumberoflikesgotten">thenumberoflikesgotten</string>
    <string name="thenavigationaldrawerbutton">TheNavigationalDrawerButton</string>
    <string name="the_scanner_camera_here">The Scanner Camera Here</string>
    <string name="a_black_camera_to_shoot">A Black camera to shoot</string>
    <string name="emailcommerce">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="passwordcommerce">Password</string>
    <string name="find_discover_choose_and_buy_anything_online">Find, Discover, Choose and Buy anything online.</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="todoblacklisted">TODO</string>
    <string name="todoyet">TODO</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="customerphone">CustomerPhone</string>
    <string name="order">Order</string>
    <string name="getthecustomerinformation">createcustomerinfoirmatio</string>
    <string name="mobile">Mobile</string>
    <string name="hybrid">Hybrid</string>
    <string name="stationary">Stationary</string>
    <string name="product_imagehere">product_imagehere</string>
    <string name="product_price">Product Price</string>
</resources>