<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.simcoder.bimbo.DriverMapActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        tools:layout="@layout/simple_gallery_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/mydrivernavigation"
                android:layout_width="63dp"
                android:layout_height="57dp"
                android:contentDescription="@string/navigation_drawer_things"
                android:src="@drawable/com_facebook_profile_picture_blank_portrait"
                tools:src="@mipmap/ic_default_user" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logout"
                android:text="@string/logouts"/>
            <Button
                android:layout_weight="1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/historys"
                android:text="@string/history"/>
            <Button
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/settings"
                android:text="@string/settings"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working"
                android:layout_margin="5sp"
                android:padding="5dp"

                android:id="@+id/workingSwitch" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <SearchView
                android:id="@+id/mysearchbox_2"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_alignParentTop="true"
               android:layout_alignLeft="@+id/gosearch_2"
                android:layout_marginEnd="30dp"
                android:layout_alignStart="@+id/gosearch_2" />






            <ImageButton
                android:id="@+id/gosearch_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"

                android:contentDescription="@string/my_string_mr_chooser_searching"
                android:src="@android:drawable/ic_media_play"
                tools:ignore="RtlCompat" />

        </RelativeLayout>
        <fragment
            android:id="@+id/place_autocomplete_fragment_2"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="240dp"
            android:layout_height="wrap_content"


            tools:layout="@layout/place_autocomplete_fragment"
            tools:visibility="gone"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customerInfo"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@android:color/white"

        android:elevation="1dp"
        android:translationZ="1dp" tools:targetApi="lollipop">

        <Button
            android:id="@+id/rideStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picked_customer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/customerProfileImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:contentDescription="@string/accessibility"
                android:padding="20sp"
                android:src="@mipmap/ic_default_user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40sp"
                android:paddingRight="40sp"
                android:paddingStart="40sp">

                <TextView
                    android:id="@+id/customerDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5sp"

                    android:text="@string/destination" />

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5sp"
                    android:text="@string/customername"
                    android:paddingTop="10sp" />

                <TextView
                    android:id="@+id/customerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customerphone"
                    android:paddingBottom="5sp"
                    android:paddingTop="10sp" />

                <TextView
                    android:id="@+id/Order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:paddingBottom="5sp"
                    android:paddingTop="10sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/drivertoolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:subtitleTextColor="@android:color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Driver Map"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <!--侧边栏样式-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="700dp">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="250dp"
            android:layout_height="700dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:openDrawer="start">

            <!--主页内容-->


            <android.support.design.widget.NavigationView
                android:id="@+id/nav_view"
                tools="start"
                android:layout_width="250dp"
                android:layout_height="700dp"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                android:visibility="visible"
                app:headerLayout="@layout/nav_header_home"
                app:menu="@menu/activitytradermapdrawer" />


        </android.support.v4.widget.DrawerLayout>
    </android.support.constraint.ConstraintLayout>

    <ImageButton


        android:id="@+id/thepickedcustomerview"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="336dp"
        android:layout_marginTop="316dp"
        android:contentDescription="@string/getthecustomerinformation"
        android:src="@drawable/plusiconhere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

</FrameLayout>

