<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
             />

        <ImageView
            android:id="@+id/product_imagehere"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/product_name"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/product_imagehere"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/chickend" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_imagehere"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price"
            android:layout_marginTop="2dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/product_description"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/thetrader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_description"
            android:layout_marginTop="2dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:visibility="visible" />
    </RelativeLayout>

</android.support.v7.widget.CardView>