<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simcoder.bimbo.CustomerMapActivity" >


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        tools:layout="@layout/simple_gallery_item" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/buttons"
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/myvlayoutnavigationalview"
                android:layout_width="63dp"
                android:layout_height="57dp"
                android:contentDescription="@string/navigation_drawer_things"
                android:scaleType="centerCrop"
                android:src="@drawable/navigationdrawer"
                tools:src="@drawable/navigationdrawer" />


            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                tools:layout="@layout/place_autocomplete_fragment" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp">

            <!--Insert the spinner into the post -->


            <SearchView
                    android:id="@+id/mysearchbox"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"

                    android:layout_toLeftOf="@+id/gosearch"


                    android:layout_toStartOf="@+id/gosearch" >

            </SearchView>


        </android.support.v7.widget.CardView>

        <ImageButton
            android:id="@+id/gosearch"
            android:layout_width="56dp"
            android:layout_height="58dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-3dp"


            android:layout_marginEnd="-48dp"
            android:layout_marginRight="-82dp"
            android:contentDescription="@string/my_string_mr_chooser_searching"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_media_play"
            tools:ignore="RtlCompat"
            tools:src="@drawable/searchcamerahere" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/driverInfo"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:visibility="gone">

            <ImageView
                android:id="@+id/driverProfileImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:contentDescription="@string/i_m_a_driver"
                android:padding="20sp"
                android:src="@mipmap/ic_default_user" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40sp"
                android:paddingStart="40sp"
                android:paddingEnd="40sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driverName"
                    android:paddingBottom="10sp"
                    android:paddingTop="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driverPhone"
                    android:paddingBottom="10sp"
                    android:paddingTop="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driverCar"
                    android:paddingBottom="10sp"
                    android:paddingTop="20sp"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.1"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:buttonBarStyle">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stationary"
                    android:id="@+id/UberX"
                    style="?android:attr/borderlessButtonStyle"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:id="@+id/UberBlack"
                    style="?android:attr/borderlessButtonStyle"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hybrid"
                    android:id="@+id/UberXl"
                    style="?android:attr/borderlessButtonStyle"/>
            </RadioGroup>

            <Button
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_trader"
                android:id="@+id/request"
                style="?android:attr/borderlessButtonStyle"

                />
        </LinearLayout>
    </LinearLayout>


    <ImageButton
        android:id="@+id/zoom_in"
        android:layout_width="60dp"
        android:layout_height="74dp"
        android:layout_marginStart="300sp"
        android:layout_marginLeft="300sp"

        android:layout_marginTop="300sp"
        android:contentDescription="@string/zoom_in_content"
        android:scaleType="fitCenter"
        android:src="@drawable/plusiconhere" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/messagefloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="400sp"
        android:layout_marginLeft="150sp"
        android:layout_marginStart="150sp"
        android:src="@android:drawable/btn_plus"
        android:focusable="true" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:subtitleTextColor="@android:color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="样式1"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <!--侧边栏样式-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="700dp">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="250dp"
            android:layout_height="700dp"

            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:openDrawer="start">

            <!--主页内容-->


            <android.support.design.widget.NavigationView
                android:id="@+id/nav_view"
                tools="start"
                android:layout_width="250dp"
                android:layout_height="700dp"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                android:visibility="visible"
                app:headerLayout="@layout/nav_header_home"
                app:menu="@menu/activitycustomermapdrawer" />


        </android.support.v4.widget.DrawerLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>

